# vidflow-clone

./: pyproject.toml
_project/: db.sqlite3
_project/_project/: settings.py  urls.py
_project/auth_app/: urls.py  views.py
_project/core/: views.py
client/vidflow-clone/: package-lock.json  package.json
client/vidflow-clone/src/: main.jsx
client/vidflow-clone/src/components/LinkButton/: LinkButton.css  LinkButton.jsx
client/vidflow-clone/src/pages/About/: About.jsx
client/vidflow-clone/src/pages/Home/: Home.jsx
