[tool.poetry]
name = "vidflow-clone"
version = "0.1.0"
description = ""
authors = ["Jonny Jackson <jrsjackson26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
django-cors-headers = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
